--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-    <h1>🌐 Digital Footprint Simulator</h1>
+    <h1>Digital Footprint Simulator</h1>
     <p class="subtitle">
       See how small online actions can slowly reveal information about you.
     </p>
